--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,5 +1,6 @@
 $color1: #ebe7e7;
 $color2: #db7312;
+$color4: #000;
 $color3: #4d4c4c;
 $font-stack1: 'Poppins', sans-serif;
 $font-stack2: arial, helvetica, sans-serif;
