--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* position: relative; */
 }
 
 p {
@@ -233,7 +232,7 @@ header .head-section .inner-head .inner-head-para .icons-l:hover {
   padding: 0 5px;
   border-radius: 100%;
 } */
-/* 
+
 .footer {
   background: #4d4c4c;
 }
@@ -252,7 +251,7 @@ header .head-section .inner-head .inner-head-para .icons-l:hover {
 .footer .foot-icons .icons-f:hover {
   color: #db7312;
 }
-
+/*
 .blob {
   position: absolute;
   top: 0;
@@ -560,7 +559,8 @@ h2.projectTitle {
 }
 
 .hRZzmY {
-  background: #f9fafc;
+  /* background: #f9fafc; */
+  background: #e6e1e1;
   box-shadow: 0 4px 6px rgb(0 0 0 / 7%);
   border-radius: 12px;
   border: 0 solid transparent;
@@ -621,14 +621,14 @@ h2.projectTitle {
 .hRZzmY img:hover {
   -ms-transform: scale(1.5); /* IE 9 */
   -webkit-transform: scale(1.5); /* Safari 3-8 */
-  transform: scale(1.7);
-  transition: width 2s, height 2s, background-color 2s, transform 2s;
+  transform: scale(1.3);
+  transition: width 2s, height 2s, background-color 2s, transform 1s;
 }
 
 .hRZzmY h1 {
   font-size: 20px !important;
   font-family: inherit;
-  font-weight: 300;
+  font-weight: 700;
   color: #212b36;
   font-style: normal;
   font-stretch: normal;
@@ -640,7 +640,7 @@ h2.projectTitle {
 .hRZzmY p {
   font-family: inherit;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 600;
   font-style: normal;
   font-stretch: normal;
   line-height: 1.4;
@@ -684,7 +684,8 @@ h2.projectTitle {
 }
 
 .iOPVmQ {
-  background: linear-gradient(151.57deg, #c4bdac 6.11%, #c4bdac 96.84%);
+  /* background: linear-gradient(151.57deg, #c4bdac 6.11%, #c4bdac 96.84%); */
+  background-color: #e6e1e1;
   min-height: 500px;
   margin: 20px;
   display: -webkit-box;
@@ -758,6 +759,7 @@ h2.projectTitle {
 
 .cLBtrO p {
   font-size: 16px;
+  font-weight: 600;
   line-height: 1.66;
   text-align: center;
   -webkit-letter-spacing: 0.24px;
@@ -765,7 +767,8 @@ h2.projectTitle {
   -ms-letter-spacing: 0.24px;
   letter-spacing: 0.24px;
   margin: 20px 0;
-  color: #4a555e;
+  /* color: #4a555e; */
+
   font-family: inherit;
 }
 
@@ -823,7 +826,7 @@ h2.projectTitle {
 
 .productShowcaseSection p {
   font-family: inherit;
-  font-weight: 300;
+  font-weight: 700;
   margin: 0 auto;
   max-width: 560px;
   padding: 0.8em 0;
@@ -832,7 +835,8 @@ h2.projectTitle {
 .bQxUV {
   font-size: 20px;
   line-height: 35px;
-  font-weight: normal;
+  /* font-weight: normal; */
+  font-weight: 700;
   font-style: normal;
   font-stretch: normal;
   -webkit-letter-spacing: 0.315px;
@@ -858,6 +862,7 @@ h2.projectTitle {
   padding: 30px;
   max-width: 85vw;
   background: #f9fafc;
+  /* background: #264983; */
   box-shadow: 0 4px 6px rgb(0 0 0 / 7%);
   border-radius: 12px;
   -webkit-transition: all 0.25s ease-in-out;
@@ -947,7 +952,7 @@ h2.projectTitle {
 
 .emmy {
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 600;
   line-height: 28px;
   color: #4d4d4d;
   margin-bottom: 13px;
@@ -957,6 +962,7 @@ h2.projectTitle {
 .emmy-2 {
   font-family: inherit;
   font-size: 16px;
+  font-weight: 600;
 }
 
 .section_header::after {
@@ -970,7 +976,7 @@ h2.projectTitle {
 }
 
 .services {
-  background-color: #f1f7f4;
+  background-color: #e6e1e1;
   margin-bottom: 40px;
   width: 100%;
   border-radius: 20px;
@@ -1039,29 +1045,30 @@ h2.projectTitle {
 }
 
 input {
-  margin-left: 150px;
-  width: 220px;
+  /* margin-left: 150px; */
+  width: 100%;
 }
 
 .email {
   border-radius: 7px;
   margin-bottom: 20px;
   border: 1px solid #979797;
-  width: 220px;
+  /* width: 220px; */
 }
 
 .message {
   border-radius: 7px;
   margin-bottom: 10px;
-  margin-left: 50px;
+  /* margin-left: 40px; */
+  width: 100%;
   border: 1px solid #979797;
 }
 
 .button {
-  font-weight: 400;
+  font-weight: 700;
   color: #000;
   text-align: center;
-  margin-left: 270px;
+  margin-left: 310px;
   border-radius: 6px;
   width: 170px;
   height: 40px;
@@ -1076,12 +1083,18 @@ input {
   color: #a17362;
 }
 
+form div {
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
 input[type=text] {
-  margin-left: 99px;
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 input[type=email] {
-  margin-left: 100px;
+  margin-bottom: 30px;
 }
 
 .framework h4 {
@@ -1092,29 +1105,29 @@ input[type=email] {
 
 @media (max-width: 768px) {
 
-  .emmy-navbar .center ul li  {
+  nav {
         display: none;
   }
 
-  .emmy-navbar .left {
+  /* .emmy-navbar .left {
       margin-left: 20px;
-  }
+  } */
   
   .design {
-      text-align: center;
-      display: block;
-      margin-left: 20px;
-      width: 90%;
+    text-align: center;
+    display: block;
+    margin-left: 20px;
+    width: 90%;
   }
 
-  .message {
+  /* .message {
       width: 200px;
       height: 100px;
       margin-left: 150px;
-  }
+  } */
   
    .button {
-       margin-left: 130px;
+      margin-left: 1px;
    }
 }
 
